fixed spacing for name

--- a/src/components/Options.css
+++ b/src/components/Options.css
@@ -13,7 +13,7 @@
   width: 60vmin;
   height: 20vmin;
   margin: 0 auto;
-  margin-bottom: 5vmin;
+  margin-top: 3vmin;
 }
 
 .Add-Workout {
