--- a/src/components/WorkoutName.css
+++ b/src/components/WorkoutName.css
@@ -10,7 +10,7 @@
 }
 
 .days-container {
-  margin-bottom: 2vmin;
+  margin-bottom: 4vmin;
   display: inline-flex;
   justify-content: center;
   align-items: center;
@@ -51,7 +51,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  margin: 0 auto 5vmin auto; /* Center horizontally and set bottom margin */
+  /* margin: 0 auto 5vmin auto;*/
   background-color: transparent;
   color: #7469b6;
 }
